# zero2prodv4

./: Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-0d7930fc1172d0aefe8bc565aeb92fe0223dccc10351a6e2fbee77f200f4d70c.json  query-4a0cab7bb7532e3aea3b8686f16783e9c4f6404ee61995595d96bedcebe9f959.json  query-ba57c8d4c8f5ad22af089e6433b339dca8affac4d4f5070a449fa1cc16f9c4ab.json
configuration/: base.yaml
migrations/: 20251019132307_seed_user.sql
scripts/: init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
